Modified some syntax and icons with new nomenclature

--- a/org.chico.uclm.add.diagram/messages.properties
+++ b/org.chico.uclm.add.diagram/messages.properties
@@ -141,3 +141,24 @@ NavigatorActionProvider_OpenDiagramActionName=Open Diagram
 MessageFormatParser_InvalidInputError=Invalid input at {0}
 AddModelingAssistantProviderTitle=Select domain model element
 AddModelingAssistantProviderMessage=Available domain model elements:
+Senses3Group_title=Senses
+Notes4Group_title=Notes
+Links5Group_title=Links
+Event2CreationTool_title=Event
+Event2CreationTool_desc=Create new Event
+Action3CreationTool_title=Action
+Action3CreationTool_desc=Create new Action
+Requirementsdescription1CreationTool_title=Requirements description
+Requirementsdescription1CreationTool_desc=Create new Requirements description
+Logicdescription2CreationTool_title=Logic description
+Logicdescription2CreationTool_desc=Create new Logic description
+Describedby1CreationTool_title=Described by
+Describedby1CreationTool_desc=Create new Described by
+Characterizedby2CreationTool_title=Characterized by
+Characterizedby2CreationTool_desc=Create new Characterized by
+WidgetFlow3CreationTool_title=Widget Flow
+WidgetFlow3CreationTool_desc=Create new Widget Flow
+DataFlow4CreationTool_title=Data Flow
+DataFlow4CreationTool_desc=Create new Data Flow
+Eventandparameters7CreationTool_title=Event and parameters
+Eventandparameters7CreationTool_desc=Create new Event and parameters
